# logand.app

./: .gitignore  Caddyfile  FINDINGS-2026-07-09.md  FINDINGS-auth-2026-07-10.md  FINDINGS.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  frob.toml  index.html  package-lock.json  package.json  tickets.md
backend/: .env.example  Dockerfile  Makefile  alembic.ini  pyproject.toml
backend/src/logand_backend/: __main__.py  asgi.py  errors.py
backend/src/logand_backend/api/: _uploads.py  admin_data.py  admin_logs.py  admin_users.py  admin_version.py  auth.py  bom.py  budget.py  documents.py  errors.py  health.py  inventory.py  invoices.py  invoices_public.py  mileage.py  notifications.py  receipts.py  tax.py  webhooks.py
backend/src/logand_backend/app/: app.py  config.py
backend/src/logand_backend/auth/: csrf.py  emails.py  passwords.py  rate_limit.py  sessions.py  tokens.py
backend/src/logand_backend/db/: base.py
backend/src/logand_backend/db/migrations/: env.py  script.py.mako
backend/src/logand_backend/db/models/: __init__.py  audit.py  bom.py  budget.py  documents.py  email_verification_tokens.py  inventory.py  invoices.py  mileage.py  password_reset_tokens.py  receipts.py  sessions.py  tax.py  users.py
backend/src/logand_backend/domain/admin_data/: service.py
backend/src/logand_backend/domain/auth/: email_verification.py  password_reset.py  service.py
backend/src/logand_backend/domain/bom/: service.py
backend/src/logand_backend/domain/budget/: service.py
backend/src/logand_backend/domain/documents/: service.py
backend/src/logand_backend/domain/inventory/: service.py
backend/src/logand_backend/domain/invoices/: export.py  recurrence.py  refunds.py  service.py  stats.py
backend/src/logand_backend/domain/mileage/: service.py
backend/src/logand_backend/domain/notifications/: mailer.py  notify.py  templates.py
backend/src/logand_backend/domain/payments/: currency.py
backend/src/logand_backend/domain/receipts/: service.py
backend/src/logand_backend/logging/: __init__.py  config.toml  filter.py  formatter.py  handler.py  json_formatter.py  logger.py  request_context.py  retention.py
backend/src/logand_backend/scripts/: _health_logging.py  fetch_tax_rules.py  generate_recurring_invoices.py  health_check.py  scheduler.py  upload_public_asset.py
backend/src/logand_backend/testing/: fake_gmail.py  fake_gmail_key.py  fake_paypal.py  fake_smtp.py  fake_stripe.py
backend/tests/: conftest.py
backend/tests/integration/: test_admin_data_service.py  test_admin_seed.py  test_auth_service.py  test_auto_tax_apply.py  test_bom_service.py  test_budget_service.py  test_email_verification_service.py  test_generate_recurring_invoices_script.py  test_inventory_service.py  test_invoice_stats.py  test_invoices_service.py  test_manual_payments.py  test_migrations.py  test_password_reset_service.py  test_payment_idempotency_constraint.py  test_rate_limit_redis.py  test_refunds_service.py  test_register_service.py  test_sessions.py  test_tax_engine.py  test_tax_rules_admin.py  test_users_service.py
backend/tests/system/: test_admin_customers.py  test_admin_data_api.py  test_admin_logs_api.py  test_admin_refunds.py  test_admin_seed_flow.py  test_admin_user_management.py  test_admin_version_api.py  test_auth_flow.py  test_bom_api.py  test_budget_api.py  test_customer_journey.py  test_documents_api.py  test_health.py  test_health_check_system.py  test_inventory_api.py  test_invoice_claiming.py  test_invoice_payment.py  test_invoice_pdf_generation.py  test_invoices_api.py  test_manual_payment_flow.py  test_mileage_api.py  test_notifications.py  test_notifications_gmail.py  test_password_reset_flow.py  test_payment_concurrency.py  test_payment_proof.py  test_paypal_flow.py  test_receipts_api.py  test_register_flow.py  test_request_logging.py  test_stripe_config.py  test_stripe_fake_server.py  test_stripe_unavailable.py  test_stripe_webhooks.py  test_zelle_config.py
backend/tests/unit/: test_api_errors.py  test_csrf.py  test_export.py  test_fetch_tax_rules_hts.py  test_fetch_tax_rules_rule_input.py  test_health_check.py  test_invoice_pdf.py  test_log_handler.py  test_log_retention.py  test_mailer.py  test_notify.py  test_passwords.py  test_paypal_provider.py  test_rate_limit.py  test_recurrence.py  test_scheduler.py  test_storage.py  test_stripe_reconcile.py  test_tax_categorizer.py  test_tax_citation.py  test_templates.py  test_uploads.py
ops/release_watch/: pyproject.toml
ops/release_watch/src/release_watch/: __main__.py  config.py  deploy.py  state.py
ops/release_watch/systemd/: release-watch.service
(+341 files in other folders)
