[project]
name = "logand-backend"
version = "0.1.0"
description = "Backend for logand.app -- public site + protected admin tool"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "argon2-cffi>=23.1",
    "redis>=5.1",
    "stripe>=11.1",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.12",
    "jinja2>=3.1",
    "httpx>=0.27",
    "typani",
]

[project.scripts]
logand-backend = "logand_backend.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/logand_backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-xdist>=3.6",
    "ruff>=0.7",
    "ty>=0.0.1a1",
    "testcontainers[postgres]>=4.8",
    "httpx>=0.27",
]
