[project]
name = "logand-backend"
version = "0.1.0"
description = "Backend for logand.app -- public site + protected admin tool"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "argon2-cffi>=23.1",
    "redis>=5.1",
    "stripe>=11.1",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.12",
    "jinja2>=3.1",
    "httpx>=0.27",
    "typani",
    "boto3>=1.35",
    # RS256-signs the JWT Bearer assertion for Gmail's service-account
    # OAuth2 flow (domain/notifications/mailer.py) -- already present
    # transitively (via httpx's TLS stack), but relied on directly now,
    # so it's a real dependency, not an accident of what else happens to
    # pull it in.
    "cryptography>=43",
]

[project.scripts]
logand-backend = "logand_backend.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/logand_backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-xdist>=3.6",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "ty>=0.0.1a1",
    "testcontainers[postgres]>=4.8",
    "httpx>=0.27",
    "aiosmtpd>=1.4",
    "moto[s3]>=5.2.2",
]

[tool.coverage.run]
source = ["src/logand_backend"]
# concurrency = ["greenlet"] -- SQLAlchemy's asyncio support bridges to
# sync DBAPI calls via greenlet_spawn; without telling coverage.py about
# that, lines executed after an `await db.execute(...)` inside a coroutine
# were silently reported as NOT covered even when the test genuinely
# exercised them (confirmed with debug prints reaching those exact "missing"
# lines) -- coverage's tracer wasn't following execution across the
# greenlet switch used to run that awaited call.
concurrency = ["greenlet"]
# The two testing/fake_*.py doubles exist purely to be driven BY tests
# (see their own doc comments) -- they're test infrastructure, not
# application code, so they're excluded from the coverage target the same
# way tests/ itself would be.
omit = ["src/logand_backend/testing/*", "src/logand_backend/db/migrations/*"]

[tool.coverage.report]
# latexmk/texlive isn't installed on every machine running the unit/
# integration suite (see tests/system/test_invoice_pdf_generation.py's
# skip condition) -- excluding this one line is what keeps a missing
# LaTeX toolchain from silently tanking the coverage percentage on a
# branch that's otherwise fully covered when the real Docker image (which
# does have it) runs the same tests.
exclude_lines = ["pragma: no cover"]
